<resources>
    <string name="app_name">PSD.See</string>
    <string name="about_info">  Copyright (c) 2016-2017 MaiMiao Studio. All rights reserved.</string>
    <string name="about">About</string>
    <string name="update_check">Check update</string>
    <string name="exit_tip">App will exit when pressing again</string>
    <string name="found_1">Found</string>
    <string name="found_2">PSD files</string>
    <string name="file_error">File information error</string>
    <string name="app_image_browser">PSD.See Browse</string>
    <string name="private_dir">Can\'t access protected directory</string>
    <string name="open_photos">Open Album</string>
    <string name="open_sdcard">Scan SDcard</string>
    <string name="scroll_page">Go to next page when scrolling again</string>
    <string name="find_psd">Find PSD</string>
    <string name="help">Help</string>
    <string name="connections">Connections</string>
    <string name="no_wifi">No Wifi connection is detected</string>
    <string name="server_ip">Server IP</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="hint_server_ip">Please input server ip</string>
    <string name="hint_password">Please input password</string>
    <string name="add_connection">Add Connection</string>
    <string name="add_server_help">Enter the IP address and password found at \'Edit\' > \'Remote Connections\' in Adobe Photoshop CS5(12.0.4) or later</string>
    <string name="server_ip_null">Please Enter the server ip</string>
    <string name="password_null">Please Enter the password</string>
    <string name="server_error">Can\'t connect to server or password is invalid, you could reset the WIFI on your computer and then refresh again.</string>
    <string name="busy">Please wait a minute when connecting</string>
    <string name="image_error">Image data error</string>
    <string name="choose_image">Choose Image</string>
    <string name="image_save_ok">Image file saved success</string>
    <string name="open_file_fail">Open file fail</string>
    <string name="error_depth_1">The document\'s color depth must is 8,</string>
    <string name="error_depth_2">but it\'s </string>
    <string name="error_depth_3">bit</string>
    <string name="error_colormode_1">The document\'s color mode must is RGB, </string>
    <string name="error_colormode_2">but it\'s </string>
    <string name="error_compression">The document\'s compression must is RLE compression</string>
    <string name="open_album_fail">Open album fail</string>
    <string name="error_out_memory">The document is much large, can not load </string>
</resources>
